<resources>
    <string name="app_name">Chat Dev-intensive</string>
    <string name="profile_label_rating">Рейтинг</string>
    <string name="profile_label_respect">Уважение</string>
    <string name="profile_hint_repository">Репозиторий</string>
    <string name="profile_hint_about">О себе</string>
    <string name="profile_hint_last_name">Фамилия</string>
    <string name="profile_hint_first_name">Имя</string>
    <string name="invalid_repo_address_message">Невалидный адрес репозитория</string>
    <string name="menu_search_title">Поиск</string>
    <string name="archive_of_chats">Архив чатов</string>
</resources>
