<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ru.skillbranch.devintensive.ui.custom.AspectRatioImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/profile_bg"
            android:scaleType="centerCrop"
            app:aspectRatio="1.78" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btn_switch_theme"
                android:layout_width="@dimen/btn_round_size"
                android:layout_height="@dimen/btn_round_size"
                android:layout_marginEnd="@dimen/spacing_huge"
                android:layout_marginTop="@dimen/spacing_more_huge"
                android:layout_toStartOf="@id/iv_avatar"
                android:background="@drawable/btn_round_bg"
                android:src="@drawable/ic_switch_day_night" />

            <ru.skillbranch.devintensive.ui.custom.CircleImageView
                android:id="@+id/iv_avatar"
                android:layout_width="@dimen/avatar_round_size"
                android:layout_height="@dimen/avatar_round_size"
                android:layout_centerHorizontal="true"
                android:src="@drawable/avatar_default" />

            <ImageButton
                android:id="@+id/btn_edit"
                android:layout_width="@dimen/btn_round_size"
                android:layout_height="@dimen/btn_round_size"
                android:layout_marginStart="@dimen/spacing_huge"
                android:layout_marginTop="@dimen/spacing_more_huge"
                android:layout_toEndOf="@id/iv_avatar"
                android:background="@drawable/btn_round_bg"
                android:src="@drawable/ic_edit_black_24dp" />

            <TextView
                style="@style/Profile.Header.Nickname"
                android:id="@+id/tv_nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_avatar"
                android:layout_centerHorizontal="true"
                tools:text="John Doe" />

            <TextView
                android:id="@+id/tv_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_nick_name"
                android:layout_centerHorizontal="true"
                tools:text="Junior Android Developer"
                android:textSize="@dimen/font_normal"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/colorAccentedSurface">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingBottom="@dimen/spacing_normal"
            android:paddingTop="@dimen/spacing_normal">

            <TextView
                android:id="@+id/tv_rating"
                style="@style/Profile.Metrics.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:drawableStart="@drawable/ic_sp_24"
                android:padding="@dimen/spacing_tiny" />

            <TextView
                style="@style/Profile.Metrics.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_label_rating" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:background="?attr/colorDivider" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingBottom="@dimen/spacing_normal"
            android:paddingTop="@dimen/spacing_normal">

            <TextView
                style="@style/Profile.Metrics.Value"
                android:id="@+id/tv_respect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:drawableStart="@drawable/ic_respect_24"
                android:padding="@dimen/spacing_tiny" />

            <TextView
                style="@style/Profile.Metrics.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_label_respect" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        style="@style/Profile.InfoItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ic_avatar"
            android:layout_width="@dimen/btn_round_size"
            android:layout_height="@dimen/btn_round_size"
            android:src="@drawable/ic_avatar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ic_avatar"
            android:layout_marginStart="@dimen/spacing_normal">

            <EditText
                style="@style/Profile.EditText.Single"
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="John"
                android:hint="@string/profile_hint_first_name"
                android:inputType="textPersonName"
                android:imeOptions="actionNext" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ic_avatar"
            android:layout_below="@id/wr_first_name"
            android:layout_marginStart="@dimen/spacing_normal">

            <EditText
                style="@style/Profile.EditText.Single"
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Doe"
                android:hint="@string/profile_hint_last_name"
                android:inputType="textPersonName"
                android:imeOptions="actionNext" />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorDivider"
        android:layout_marginEnd="@dimen/spacing_maximum" />

    <LinearLayout
        style="@style/Profile.InfoItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/btn_round_size"
            android:layout_height="@dimen/btn_round_size"
            android:src="@drawable/ic_about" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            app:counterMaxLength="128">

            <EditText
                style="@style/Profile.EditText.MultiLine"
                android:id="@+id/et_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_about"
                android:inputType="textMultiLine"
                android:imeOptions="actionNext" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/Profile.InfoItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/btn_round_size"
            android:layout_height="@dimen/btn_round_size"
            android:src="@drawable/ic_repo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_repository"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal">

            <EditText
                style="@style/Profile.EditText.Single"
                android:id="@+id/et_repository"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_repository"
                android:inputType="textUri"
                android:imeOptions="actionDone" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ic_eye"
            android:layout_width="@dimen/ic_normal"
            android:layout_height="@dimen/ic_normal"
            android:layout_marginStart="@dimen/spacing_normal"
            android:src="@drawable/ic_eye_24dp"
            android:layout_gravity="center" />
    </LinearLayout>

</LinearLayout>